tests/cases/should_fail/literals/non_hex_unicode_char.hash
// run=fail, stage=parse

k := '\u{g00000}';
