tests/cases/should_fail/literals/non_hex_unicode_char.stderr
error: invalid character escape sequence. expected `}` after a escape sequence
 --> $DIR/non_hex_unicode_char.hash:1:10
1 |   k := '\u{g00000}';
  |            ^ here
